# AUR-final-project

./: .gitignore  CMakeLists.txt  README.md  arduino_backup.ino  tkinterConsole.py  world.world
console/: Console.py  gui_asser_unfinished.py
console/Test Codes/: Console_Final_Test.py  QR_Reading_Test_Code.py  TestSet Of QR Codes.docx
embedded/embedded-arduino-framework/: .gitignore  platformio.ini
embedded/embedded-arduino-framework/include/: IRsensor.h  README  imu.h
embedded/embedded-arduino-framework/lib/: IRsensor.cpp  RTOS_code.cpp  RTOScode.cpp  imu.cpp
embedded/embedded-arduino-framework/src/: IRsensor.cpp  IRsensor.h  PID.cpp  PID.h  encoder.cpp  encoder.h  imu.cpp  imu.h  main.cpp  motor.cpp  motor.h  servo.cpp  servo.h
navigation/code/final_proj_test (copy)/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
navigation/code/final_proj_test (copy)/install/autonomous_test/share/autonomous_test/: package.bash  package.dsv  (+4 more)
navigation/code/final_proj_test (copy)/log/: latest_build
navigation/code/final_proj_test (copy)/src/final_test/: package.xml  setup.py
navigation/code/final_proj_test (copy)/src/final_test/final_test/: esp_publisher_node.py  esp_subscriber_node.py  test_mqtt.py
navigation/dev_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
navigation/dev_ws/install/my_bot/share/my_bot/: local_setup.sh  package.sh
navigation/dev_ws/log/: latest_build
navigation/robot_navigation/src/final_test/: setup.cfg
navigation/robot_navigation/src/final_test/final_test/: sample.json
src/: main.c
(+20 files in other folders)
