<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_test</name>
  <version>0.0.0</version>
  <description>Odometry node that integrates MQTT for telemetry data.</description>
  <maintainer email="your_email@example.com">abood</maintainer>
  <license>MIT</license>  <!-- Change to your preferred license -->

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  

  <exec_depend>paho-mqtt</exec_depend>
  <exec_depend>msgpack</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
